# sine-one

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bundler.toml  deploy.sh
docs/: design.md
docs/references/: analog-sine-vco.md  analog-unruly-vcf.md  vactrols.md
sine_one/: Cargo.toml
sine_one/benches/: dsp_bench.rs
sine_one/src/: lib.rs  main.rs  params.rs  plugin.rs
sine_one/src/dsp/: envelope.rs  mod.rs  oscillator.rs  pan.rs  smoother.rs  svf.rs  voice.rs  wavefold.rs
xtask/src/: main.rs
